[package]
name = "grpc_health_check"
version = "0.1.0"
edition = "2018"
include = ["build.rs"]
publish = false

[workspace]
members = [
  "tests/integration_tests"
]

[[bin]]
name = "grpc-health-check"
path = "src/main.rs"
doctest = false

[dependencies]
mimalloc = { version = "0.1.26", optional = true }
prost = "0.8"
serde = { version = "1.0.126", features = ["derive"] }
serde_yaml = "0.8.17"
structopt = "0.3"
tokio = { version = "1.8.1", features = ["full"] }
tonic = { version = "0.5.0", features = ["prost", "tls", "transport"] }

[build-dependencies]
tonic-build = { version = "0.5.1", features = ["transport", "prost"] }

[profile.release]
lto = true
panic = "abort"