[package]
name = "grpc_health_check"
version = "0.1.1"
edition = "2018"
include = ["build.rs"]
publish = false

[workspace]
members = [
  "tests/integration_tests"
]

[[bin]]
name = "grpc-health-check"
path = "src/main.rs"
doctest = false

[dependencies]
mimalloc = { version = "0.1.28", optional = true }
prost = "0.9"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
structopt = "0.3"
tokio = { version = "1.17.0", features = ["full"] }
tonic = { version = "0.6.2", features = ["prost", "tls", "transport"] }

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["transport", "prost"] }

[profile.release]
lto = true
panic = "abort"
