[package]
name = "integration-tests"
version = "0.0.0"
edition = "2018"
include = ["build.rs"]
publish = false

[dependencies]
prost = "0.7"
tonic = { version = "0.4.1", features = ["prost", "tls", "transport"] }

[dev-dependencies]
assert_cmd = "1.0.3"
futures-util = "0.3"
predicates = "1"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "net"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic-health = "0.3.0"

[build-dependencies]
tonic-build = { version = "0.4.1", features = ["transport", "prost"] }
